k8s/backend-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-backend-blue
  namespace: recipe-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recipe-backend
      version: blue
  template:
    metadata:
      labels:
        app: recipe-backend
        version: blue
    spec:
      containers:
      - name: backend
        image: recipeacr9c4b0f.azurecr.io/recipe-backend:38c9a68c2bb01661d3b8c3e7c119497e38fbae01
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 20
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "512Mi"
