k8s/backend-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-backend-green
  namespace: recipe-app
spec:
  replicas: 0
  selector:
    matchLabels:
      app: recipe-backend
      version: green
  template:
    metadata:
      labels:
        app: recipe-backend
        version: green
    spec:
      containers:
      - name: backend
        image: recipeacr9c4b0f.azurecr.io/recipe-backend:fdbbeaa48a756311d55671b6f9a44216a99d4454
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "512Mi"
