k8s/frontend-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-frontend-blue
  namespace: recipe-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recipe-frontend
      version: blue
  template:
    metadata:
      labels:
        app: recipe-frontend
        version: blue
    spec:
      containers:
      - name: frontend
        image: recipeacr9c4b0f.azurecr.io/recipe-frontend:df5ad47c62a7dd76f683f3202bd6f945235feeec
        ports:
        - containerPort: 22137
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
