k8s/frontend-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-frontend-green
  namespace: recipe-app
spec:
  replicas: 0
  selector:
    matchLabels:
      app: recipe-frontend
      version: green
  template:
    metadata:
      labels:
        app: recipe-frontend
        version: green
    spec:
      containers:
      - name: frontend
        image: recipeacr9c4b0f.azurecr.io/recipe-frontend:0aa9c5358211e073a2138c2bf337fb32b117d351
        ports:
        - containerPort: 22137
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
