k8s/services.yml
apiVersion: v1
kind: Service
metadata:
  name: recipe-backend
  namespace: recipe-app
spec:
  selector:
    app: recipe-backend
    version: blue
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: recipe-frontend
  namespace: recipe-app
spec:
  selector:
    app: recipe-frontend
    version: blue
  ports:
  - port: 80
    targetPort: 22137
  type: LoadBalancer
