k8s/recipe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipe-frontend-ingress
  namespace: recipe-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - recipe-tracker-ing.francecentral.cloudapp.azure.com
      secretName: recipe-tls
  rules:
    - host: recipe-tracker-ing.francecentral.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recipe-frontend
                port:
                  number: 80
